# inelastic-structure

./: .gitignore  .python-version  README.md  TODO.md  disp.py  mises-ip.py  mises.py  profile_data-1.prof  profile_data-2.prof  profile_data-3.prof  profile_data-4.prof  profile_data-5.prof  profile_data-6.prof  profile_data-7.prof  profile_data-8.prof  profile_data.prof  pyproject.toml  run.py
cli/: create.py
cli/functions/: create_rectangular_plate.py
compare/: abar-after-violate.py  b_inv_diff_21_unsift_22_viol.csv  bbar_updated.py  semiconfined-sifted-16-full.txt  semiconfined-sifted-4-failed.txt  semiconfined-sifted-442-full.txt  semiconfined-sifted-8-full.txt  semiconfined-sifted-after-fix.txt  semiconfined-sifted.txt  semiconfined-unsifted-full.txt  semiconfined-unsifted.txt  sifted_pieces.py  sifted_wills.txt  tripod-spm-unpivot.py  tripod-spm.py  unsifted_wills.txt  z-intact.py  z-sifted-16.py  z-sifted-4.py
compare/basics_after21/: basics_after21.txt
compare/plate-4element-inelastic-q8r/: sifted-results  unsifted-results
compare/plate-semiconfined-inelastic/: sifted-4sifted_pieces.txt
compare/semiconfined-sifted-4/: inc-22-violated-pieces.txt
data/: skew.xlsx
src/: aggregate.py  analysis.py  analyze.py  assemble.py  elements.py  flowchart.py  functions.py  generate.py  getdata.py  main.py  models.py  plot.py  population.py  prepare.py  prof.py  programming.py  programming_old.py  response.py  settings.py  static_analysis.py  structure.py  visualization.py  workshop.py
tests/: examples.py  test_examples.py  test_get_elements_max_dof_num.py
(+353560 files in other folders)
