[tool.poetry]
name = "inelastic-structure"
version = "0.1.0"
description = ""
authors = ["h4m3d"]

[tool.poetry.dependencies]
python = "^3.9.4"
numpy = "^1.20.2"
sympy = "^1.8"
matplotlib = "^3.4.1"
openpyxl = "^3.0.7"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
