[tool.poetry]
name = "inelastic-structure"
version = "0.1.0"
description = ""
authors = ["h4m3d"]

[tool.poetry.dependencies]
python = ">=3.9.9,<3.11"
numpy = "^1.22.0"
sympy = "^1.9"
matplotlib = "^3.5.1"
openpyxl = "^3.0.9"
pandas = "^1.3.5"
scipy = "^1.7.3"
pydantic = "^1.9.0"
PyYAML = "^6.0"
line-profiler = "^4.1.3"
numba = "^0.60.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
